grammar.js
    source_file: $ => seq(optional(/\uFEFF/), repeat($._line)),

    // ---- Top-level lines ----
    _line: $ => choice(
      $.comment,
      $.blank_line,
      $.object_pair,
      $.top_array_item,
    ),

    blank_line: $ => $._newline,

    // Spec 0.7.0 § 3.2: a line terminator is LF, CR, or CRLF — all three
    // MUST be treated as equivalent. `\r?\n` (LF or CRLF only) rejected a
    // lone CR; every line-terminator-matching pattern in this grammar
    // uses the same `\r\n|\r|\n` alternation.
    _newline: $ => /\r\n|\r|\n/,

    // ---- Comment ----
    //
    // In spec 0.5.0 a comment starts with `##` (two hashes). A single
    // `#` is ordinary content. The token captures the whole line
    // including the trailing newline to beat `_top_scalar_text` at the
    // lexer's longest-match step.
    comment: $ => token(prec(1, /##[^\r\n]*(\r\n|\r|\n)/)),

    // ---- Object pair ----
    //
    // After the separator, the external `_marker_ws` token asserts
    // that the next byte is whitespace, CR, LF, or EOF (§ 6.10).
    object_pair: $ => choice(
      // After `::` the body is a literal scalar (NOT dispatched through
      // compound-opener / multi-line dispatch). `raw_scalar` accepts any
      // line content including `(`, `{`, `[`-starting text.
      seq(
        field('key', $.key),
        field('separator', $.sep_raw),
        $._marker_ws,
        field('value', choice($.empty_value, $.raw_scalar)),
      ),
      // After `:` the body goes through the full § 5.2 dispatch.
      seq(
        field('key', $.key),
        field('separator', $.sep_string),
        $._marker_ws,
        choice(
          field('value', $.empty_value),
          field('value', $._value_line),
        ),
      ),
    ),

    // `::` wins over `:` via higher precedence.
    sep_raw:    $ => token(prec(3, '::')),
    sep_string: $ => token(prec(1, ':')),

    // ---- Keys ----
    key: $ => choice(
      $._spaced_key,
      $.dotted_key,
      // A key that is exactly one quoted segment, undotted (§ 5.3.3):
      // `"port": 1`. Named (not hidden) so highlighting/queries can
      // tell a quoted key apart from a bare one.
      $.quoted_key_segment,
    ),

    // A key may contain internal whitespace (spec 0.5.0 § 4): the run of
    // space-separated words up to the separator is one key
    // (`multi word key: value`). The inter-word spaces are `extras`,
    // so the `key` node still spans the whole text with no named children
    // (renders as `(key)`, same as a single-word key).
    //
    // Per § 5.3.3's positional rule, the whole glued-and-spaced run is
    // ONE segment — the rule looks only at the first code point of the
    // segment's raw text, i.e. the first byte of the FIRST word. So only
    // that first word excludes a leading quote (`_bare_key_segment`);
    // every later word is a continuation of the same bare segment and a
    // leading quote there is ordinary content (`_bare_key_segment_cont`,
    // identical to `_bare_key_segment` but without the first-byte quote
    // exclusion). `foo "bar": 1` is thus the single bare key `foo "bar"`
    // (quote is mid-segment). `"a" "b": 1` is unaffected: its first word
    // starts with a quote, so `_bare_key_segment` cannot lex it at all —
    // the FIRST word alone forces the `quoted_key_segment` alternative
    // of `key`, and a second, space-separated quoted/bare word after a
    // complete quoted key has nothing left to attach to, producing the
    // `InvalidKey` `ERROR` (see `quoted_key_segment` below).
    _spaced_key: $ => prec.left(seq(
      $._bare_key_segment,
      repeat($._bare_key_segment_cont),
    )),

    // Spec 0.7.0 § 5.3.3: each dot-separated piece is independently
    // bare or quoted — the positional rule is "re-applied fresh at the
    // start of EVERY segment", including the one right after a dot
    // (`a."b.c".d: 1`).
    dotted_key: $ => prec.left(seq(
      $._key_segment,
      repeat1(seq('.', $._key_segment)),
    )),

    _key_segment: $ => choice($.quoted_key_segment, $._bare_key_segment),

    // Bare key segment (spec 0.6.0 § 4, positional rule added in
    // 0.7.0 § 5.3.3): a non-empty run of plain key bytes and/or escape
    // sequences. Plain key bytes exclude whitespace, the bracket/
    // paren/brace bytes, `:`, `,`, the dotted-path separator `.`, and
    // the escape lead `\`. Raw `#` is an ordinary key byte (spec
    // 0.7.0 § 3.4/§ 4 `<key-char>`); only a trimmed line whose first
    // non-whitespace code points are `##` is a comment, and the
    // whole-line `comment` token wins that competition by longest match.
    // Those structural bytes — including `\.` and `\:` — can appear
    // inside a key when escaped. Spec 0.7.0 § 3.7 has fourteen escape
    // forms: the ten from 0.6.0 plus `\"`, `\'`, `` \` ``, and `\uXXXX`
    // (exactly four case-insensitive hex digits, never partially
    // consumed — a malformed `\u` form simply fails every alternative
    // below, which is what makes it a parse error).
    //
    // The FIRST byte additionally excludes `"`, `'`, `` ` `` — those
    // open a `quoted_key_segment` instead (§ 5.3.3's positional rule)
    // — while a quote at any OTHER position stays an ordinary key byte
    // (`port": 1`, `don't: 1`, unaffected by quoting).
    //
    // The dotted-path separator is an UNescaped `.`; an unescaped `\`
    // is always the start of an escape sequence (fourteen forms).
    quoted_key_segment: $ => token(choice(
      seq('"', repeat(choice(
        /[^\x00-\x08\x0A\x0D\x0E-\x1F\x7F\\"]/,
        /\\[\\,\}\]\{\[nr.:"'`]/,
        /\\u[0-9a-fA-F]{4}/,
      )), '"'),
      seq("'", repeat(choice(
        /[^\x00-\x08\x0A\x0D\x0E-\x1F\x7F\\']/,
        /\\[\\,\}\]\{\[nr.:"'`]/,
        /\\u[0-9a-fA-F]{4}/,
      )), "'"),
      seq('`', repeat(choice(
        /[^\x00-\x08\x0A\x0D\x0E-\x1F\x7F\\`]/,
        /\\[\\,\}\]\{\[nr.:"'`]/,
        /\\u[0-9a-fA-F]{4}/,
      )), '`'),
    )),

    // ---- Value line ----
    _value_line: $ => choice(
      // Compound openers (eat the newline).
      $.compound_object,
      $.compound_array,
      $.multiline_stripped,
      $.multiline_verbatim,
      // Inline empty compound forms (followed by newline).
      $.empty_object,
      $.empty_array,
      $.empty_paren,
      $.empty_double_paren,
      // Inline compounds (new in 0.5.0).
      $.inline_object,
      $.inline_array,
      // Keywords (single token followed by newline).
      $.keyword,
      // Number literals (distinct nodes for highlighting).
      $.integer,
      $.float,
      // Scalar — catch-all line content.
      $.scalar,
    ),

    // Empty value = separator immediately followed by newline.
    empty_value: $ => $._newline,

    // ---- Empty inline compounds (one full line) ----
    empty_object:       $ => seq(token(prec(5, '{}')),   $._newline),
    empty_array:        $ => seq(token(prec(5, '[]')),   $._newline),
    empty_paren:        $ => seq(token(prec(5, '()')),   $._newline),
    empty_double_paren: $ => seq(token(prec(5, '(())')), $._newline),

    // ---- Multi-line compounds ----
    open_brace:    $ => token(prec(4, /\{[ \t]*(\r\n|\r|\n)/)),
    close_brace:   $ => seq(token(prec(4, '}')),    $._strict_eol),
    open_bracket:  $ => token(prec(4, /\[[ \t]*(\r\n|\r|\n)/)),
    close_bracket: $ => seq(token(prec(4, ']')),    $._strict_eol),
    open_paren:    $ => token(prec(4, /\([ \t]*(\r\n|\r|\n)/)),
    open_dparen:   $ => token(prec(5, /\(\([ \t]*(\r\n|\r|\n)/)),
    close_paren:   $ => $._stripped_close,
    close_dparen:  $ => $._verbatim_close,

    compound_object: $ => seq(
      $.open_brace,
      repeat(choice($.comment, $.blank_line, $.object_pair)),
      $.close_brace,
    ),

    compound_array: $ => seq(
      $.open_bracket,
      repeat(choice($.comment, $.blank_line, $.array_item)),
      $.close_bracket,
    ),

    // ---- Inline compounds (new in spec 0.5.0) ----
    //
    // `{key: value, key2: value2}` and `[v1, v2, v3]` are valid as a
    // value on the right-hand side of a pair or as an array item.
    // Trailing comma is allowed. Nesting is supported.
    //
    // These are followed by a newline (they consume the rest of the line).
    inline_object: $ => seq(
      '{',
      optional($._inline_pair_list),
      '}',
      $._newline,
    ),

    inline_array: $ => seq(
      '[',
      optional($._inline_item_list),
      ']',
      $._newline,
    ),

    _inline_pair_list: $ => seq(
      $.inline_pair,
      repeat(seq(',', $.inline_pair)),
      optional(','),
    ),

    // The value is optional: `{x:, y: 1}` and `{empty:}` are valid —
    // a separator immediately followed by `,` or `}` is an empty value
    // (spec 0.5.0 § 5.8).
    inline_pair: $ => seq(
      field('key', $.key),
      field('separator', choice($.sep_raw, $.sep_string)),
      optional(field('value', $.inline_value)),
    ),

    _inline_item_list: $ => seq(
      $.inline_value,
      repeat(seq(',', $.inline_value)),
      optional(','),
    ),

    // An inline value is either a nested inline compound, or an inline
    // scalar (which may contain escape sequences).
    inline_value: $ => choice(
      $.nested_inline_object,
      $.nested_inline_array,
      $.inline_scalar,
    ),

    nested_inline_object: $ => seq(
      '{',
      optional($._inline_pair_list),
      '}',
    ),

    nested_inline_array: $ => seq(
      '[',
      optional($._inline_item_list),
      ']',
    ),

    // An inline scalar is terminated by an unescaped `,`, `}`, or `]`.
    // It may contain escape sequences (§ 3.7).
    //
    // The first chunk must NOT begin with `{` or `[`: a value position
    // that opens with `{`/`[` is a nested compound, not a scalar. After
    // the first character those bytes are ordinary literal content
    // (`hello{world`, `mid[bracket`). This head/rest split keeps
    // `nested_inline_*` vs `inline_scalar` unambiguous without sacrificing
    // mid-value literal braces (§ 5.8).
    inline_scalar: $ => seq(
      choice($.escape_sequence, $._inline_scalar_head),
      repeat(choice($.escape_sequence, $._inline_scalar_text)),
    ),

    // Escape sequences recognised inside inline scalars (spec 0.7.0 § 3.7:
    // fourteen forms). `\.` and `\:` yield literal `.` and `:` — inside a
    // value these are redundant (already literal bytes there) but remain
    // accepted for symmetry with key parsing. `\"`, `\'`, `` \` `` yield
    // their literal quote byte (§ 5.3.3: recognised in every escape-aware
    // context alike, values included, even though a raw quote in a value
    // is never structural). `\uXXXX` names a code point by exactly four
    // case-insensitive hex digits; a malformed form (fewer than four
    // digits) matches no alternative here and is therefore never
    // partially consumed.
    escape_sequence: $ => token(choice(
      '\\\\',
      '\\,',
      '\\}',
      '\\]',
      '\\{',
      '\\[',
      '\\n',
      '\\r',
      '\\.',
      '\\:',
      '\\"',
      '\\\'',
      '\\`',
      /\\u[0-9a-fA-F]{4}/,
    )),

    // Leading chunk of a scalar: first byte excludes whitespace and the
    // openers `{`/`[` (so a value starting with an opener is a nested
    // compound), plus the usual `\` `,` `}` `]` / CR / LF. Subsequent
    // bytes allow `{`/`[` as literal content.
    _inline_scalar_head: $ => token(/[^ \t\x0B\x0C\u0085\u00A0\u1680\u2000-\u200A\u2028\u2029\u202F\u205F\u3000\\,\{\[\}\]\r\n][^\\,\}\]\r\n]*/),

    // Continuation text after the head (or after an escape): any byte
    // except `\`, `,`, the closers `}` `]`, and CR / LF. Open delimiters
    // `{`/`[` are allowed here as literal content.
    _inline_scalar_text: $ => token(/[^\\,\}\]\r\n]+/),

    // ---- Array items ----
    array_item: $ => choice(
      seq(
        field('marker', $.sep_raw),
        $._marker_ws,
        field('value', choice($.empty_value, $.raw_scalar)),
      ),
      // Plain value item — same set as object pair value.
      field('value', $._value_line),
    ),

    // Top-level array item (§ 5.0.1).
    top_array_item: $ => choice(
      seq(
        field('marker', $.sep_raw),
        $._marker_ws,
        field('value', choice($.empty_value, $.raw_scalar)),
      ),
      field('value', $.compound_object),
      field('value', $.compound_array),
      field('value', $.multiline_stripped),
      field('value', $.multiline_verbatim),
      field('value', $.empty_object),
      field('value', $.empty_array),
      field('value', $.empty_paren),
      field('value', $.empty_double_paren),
      field('value', $.inline_object),
      field('value', $.inline_array),
      field('value', $.keyword),
      field('value', $.integer),
      field('value', $.float),
      field('value', $.top_scalar),
    ),

    // `top_scalar` — bare-scalar at the document root. Forbids `:` so
    // that pair-shaped lines always parse as `object_pair`.
    top_scalar: $ => $._top_scalar_text,
    _top_scalar_text: $ => token(/[^ \t\x0B\x0C\u0085\u00A0\u1680\u2000-\u200A\u2028\u2029\u202F\u205F\u3000:\{\[\(\r\n][^:\r\n]*(\r\n|\r|\n)/),

    // ---- Multi-line strings ----
    multiline_stripped: $ => seq(
      $.open_paren,
      repeat($.multiline_content_line),
      $.close_paren,
    ),

    multiline_verbatim: $ => seq(
      $.open_dparen,
      repeat($.multiline_content_line),
      $.close_dparen,
    ),

    multiline_content_line: $ => token(prec(-1, /[^\r\n]*(\r\n|\r|\n)/)),

    // ---- Scalar (default value body, until end of line) ----
    scalar: $ => seq(
      $._scalar_text,
      $._newline,
    ),

    // `raw_scalar` is used exclusively after `::` (raw marker). It accepts
    // any non-empty line content, including `(`, `{`, `[`-starting text.
    // Per spec § 5.2: after `::` the body is NEVER dispatched as a
    // compound opener or multi-line string opener — it is always a literal
    // String value. This is a separate rule (not `scalar`) because
    // `scalar`'s underlying `_scalar_text` deliberately excludes those
    // opening bytes to avoid lexer ambiguity in the non-raw value context.
    raw_scalar: $ => seq(
      $._raw_scalar_text,
      $._newline,
    ),
    _raw_scalar_text: $ => /[^ \t\x0B\x0C\u0085\u00A0\u1680\u2000-\u200A\u2028\u2029\u202F\u205F\u3000\r\n][^\r\n]*/,

    // Scalar text: any non-whitespace, non-newline content up to end
    // of line. Both `#` and `##` are allowed as content bytes in 0.5.0.
    // Lines starting with `{` or `[` are always handled by structural
    // rules (compound_object, compound_array, empty_object, empty_array,
    // inline_object, inline_array), so `_scalar_text` explicitly excludes
    // those opening bytes at position 0 to avoid the greedy-token
    // ambiguity. Lines starting with `(` are handled by multiline or
    // empty-paren rules likewise.
    _scalar_text: $ => /[^ \t\x0B\x0C\u0085\u00A0\u1680\u2000-\u200A\u2028\u2029\u202F\u205F\u3000\{\[\(\r\n][^\r\n]*/,

    // ---- Number literals ----
    //
    // Captured as distinct node kinds so syntax highlighters can colour
    // them differently from plain strings.
    //
    // IMPORTANT: These are whole-line tokens (pattern + optional
    // horizontal whitespace + newline). Using a whole-line token (like
    // `comment` and `_top_scalar_text`) avoids the ambiguity where the
    // partial integer token `1` wins over the scalar token `1:2:3` via
    // prec — with a whole-line token the match for `1:2:3\n` is length
    // 5 for scalar and no match for integer (`:` breaks the pattern),
    // so scalar correctly wins on non-numeric lines.
    //
    // Float must be tested before integer because the float pattern
    // (decimal point form) is a strict superset of the integer pattern
    // prefix. Float is given prec(3) so it beats integer on `1.5\n`.
    //
    // Integer forms (§ 3.6): hex, octal, binary, decimal with underscores.
    kw_null:  $ => token(prec(3, 'null')),
