test/corpus/comments.txt
==================
Line comments (double-hash, spec 0.5.0)
==================
## top-level comment
port: 8080
## another comment
host: localhost

---

(source_file
  (comment)
  (object_pair
    key: (key)
    separator: (sep_string)
    value: (integer))
  (comment)
  (object_pair
    key: (key)
    separator: (sep_string)
    value: (scalar)))

==================
Single hash inside value is content (spec 0.5.0)
==================
color: #ff00ff
url: http://x/#frag
tag: a#b

---

(source_file
  (object_pair
    key: (key)
    separator: (sep_string)
    value: (scalar))
  (object_pair
    key: (key)
    separator: (sep_string)
    value: (scalar))
  (object_pair
    key: (key)
    separator: (sep_string)
    value: (scalar)))

==================
Double hash inside value is content (not a comment)
==================
note: see ##section-3 for details
hash: a##b

---

(source_file
  (object_pair
    key: (key)
    separator: (sep_string)
    value: (scalar))
  (object_pair
    key: (key)
    separator: (sep_string)
    value: (scalar)))
