test/corpus/compound_array.txt
==================
Array of scalars
==================
items: [
    a
    b
    c
]

---

(source_file
  (object_pair
    key: (key)
    separator: (sep_string)
    value: (compound_array
      (open_bracket)
      (array_item
        value: (scalar))
      (array_item
        value: (scalar))
      (array_item
        value: (scalar))
      (close_bracket))))

==================
Array with marker items (spec 0.5.0 — only :: marker)
==================
mixed: [
    plain
    :: literal
    42
    3.14
    true
    null
]

---

(source_file
  (object_pair
    key: (key)
    separator: (sep_string)
    value: (compound_array
      (open_bracket)
      (array_item
        value: (scalar))
      (array_item
        marker: (sep_raw)
        value: (raw_scalar))
      (array_item
        value: (integer))
      (array_item
        value: (float))
      (array_item
        value: (keyword
          (kw_true)))
      (array_item
        value: (keyword
          (kw_null)))
      (close_bracket))))
