test/corpus/compounds/compound_object.txt
==================
Multi-line object
==================
server: {
    host: 127.0.0.1
    port: 8080
}

---

(source_file
  (object_pair
    key: (key)
    separator: (sep_string)
    value: (compound_object
      (open_brace)
      (object_pair
        key: (key)
        separator: (sep_string)
        value: (scalar))
      (object_pair
        key: (key)
        separator: (sep_string)
        value: (integer))
      (close_brace))))

==================
Nested objects
==================
outer: {
    inner: {
        x: 1
    }
}

---

(source_file
  (object_pair
    key: (key)
    separator: (sep_string)
    value: (compound_object
      (open_brace)
      (object_pair
        key: (key)
        separator: (sep_string)
        value: (compound_object
          (open_brace)
          (object_pair
            key: (key)
            separator: (sep_string)
            value: (integer))
          (close_brace)))
      (close_brace))))

==================
Compound object with nested compounds (visible bracket tokens)
==================
root: {
    arr: [
        a
        b
    ]
    sub: {
        k: v
    }
}

---

(source_file
  (object_pair
    key: (key)
    separator: (sep_string)
    value: (compound_object
      (open_brace)
      (object_pair
        key: (key)
        separator: (sep_string)
        value: (compound_array
          (open_bracket)
          (array_item
            value: (scalar))
          (array_item
            value: (scalar))
          (close_bracket)))
      (object_pair
        key: (key)
        separator: (sep_string)
        value: (compound_object
          (open_brace)
          (object_pair
            key: (key)
            separator: (sep_string)
            value: (scalar))
          (close_brace)))
      (close_brace))))
