test/corpus/documents/mixed.txt
==================
Realistic mixed config (spec 0.5.0)
==================
## server config
service: web
port: 8080
ratio: 0.75
tls: true
tags: [
    prod
    eu-west-1
]
db.host: primary.internal
db.timeout: 30
banner: ((
welcome
to the service
))

---

(source_file
  (comment)
  (object_pair
    key: (key)
    separator: (sep_string)
    value: (scalar))
  (object_pair
    key: (key)
    separator: (sep_string)
    value: (integer))
  (object_pair
    key: (key)
    separator: (sep_string)
    value: (float))
  (object_pair
    key: (key)
    separator: (sep_string)
    value: (keyword
      (kw_true)))
  (object_pair
    key: (key)
    separator: (sep_string)
    value: (compound_array
      (open_bracket)
      (array_item
        value: (scalar))
      (array_item
        value: (scalar))
      (close_bracket)))
  (object_pair
    key: (key
      (dotted_key))
    separator: (sep_string)
    value: (scalar))
  (object_pair
    key: (key
      (dotted_key))
    separator: (sep_string)
    value: (integer))
  (object_pair
    key: (key)
    separator: (sep_string)
    value: (multiline_verbatim
      (open_dparen)
      (multiline_content_line)
      (multiline_content_line)
      (close_dparen))))

==================
Whole-line scalar starting with ( / (( followed by text is a String, not a multiline opener (spec 0.7.0 § 4 <value-start>/<scalar-body>, § 5.8.5; fixture inline/paren_scalar_is_string.canonical)
==================
cfg: {
    a:: (
    b:: ((
    c: 1
    d: (tail
    e: ((double-tail
}

---
